# agent-eval-harness

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TRACING.md  eval.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml  tests.yml
.specify/memory/: constitution.md
agent_eval/: __init__.py  _bootstrap.py  config.py  hooks.py  reorganize.py  state.py
agent_eval/agent/: __init__.py  base.py  claude_code.py  cli_runner.py  responses_api.py  stream_capture.py
agent_eval/cli/: __init__.py  trace_run.py
agent_eval/evalhub/: __init__.py  adapter.py  config_translator.py  results_mapper.py  s3_dataset.py  stubs.py
agent_eval/judges/: __init__.py
agent_eval/judges/efficiency/: cost_budget.py
agent_eval/judges/process/: tool_call_validation.py
agent_eval/judges/quality/: output_completeness.md
agent_eval/judges/safety/: no_harmful_content.md
agent_eval/mlflow/: __init__.py  datasets.py  experiment.py  trace_builder.py  traces.py
brainstorm/: 00-overview.md  01-structured-events.md  02-event-powered-judges.md
deploy/evalhub/: Containerfile  README.md  entrypoint.py  evalhub-job.yaml  provider.yaml
deploy/evalhub/rfe-assess/: eval.yaml  rubric.md
docs/: 0005-evalhub-custom-provider-adapter-contract.md  evalhub-provider-technical-report.md  evalhub-rfes.md  opaque-cli-runner-contract.md
docs/plans/: 2026-04-30-evalhub-cluster-deploy.md
provider/: README.md  configmap-template.yaml
scripts/: discover.py  ensure_deps.py
skills/eval-analyze/: SKILL.md
skills/eval-check/: SKILL.md
skills/eval-dataset/: SKILL.md
skills/eval-mlflow/: SKILL.md
skills/eval-optimize/: SKILL.md
skills/eval-review/: SKILL.md
skills/eval-run/: SKILL.md
skills/eval-setup/: SKILL.md
specs/002-structured-events/: REVIEWERS.md  plan.md  spec.md  tasks.md
specs/004-reusable-judges-library/: REVIEWERS.md  data-model.md  plan.md  quickstart.md  research.md  review-findings.md  spec.md  tasks.md
specs/005-eval-directory-layout/: REVIEWERS.md  data-model.md  plan.md  research.md  review-findings.md  spec.md  tasks.md
tests/: conftest.py  demo_responses_api.py  test_builtin_judges.py  test_config.py  test_discovery.py  test_extract_progress.py  test_hook_outputs.py  test_hooks.py  test_judge_registry.py  test_layout.py  test_per_model_cost.py  test_reorganization.py  test_responses_api.py  test_run_isolation.py  test_score_builtin.py  test_stdout_template.py  test_stream_capture.py  test_tool_extraction.py  test_trace_builder.py
tests/e2e/: test_external_state.py
(+43 files in other folders)
