[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-eval-harness"
version = "0.1.0"
description = "Agent and skill evaluation harness"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mlflow = ["mlflow[genai]>=3.5"]
anthropic = ["anthropic[vertex]>=0.40"]
all = [
    "mlflow[genai]>=3.5",
    "anthropic[vertex]>=0.40",
]
test = ["pytest>=8.0"]

[project.scripts]
claude-trace = "agent_eval.cli.trace_run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not e2e'"
markers = ["e2e: end-to-end tests requiring Claude API (deselected by default)"]

[tool.setuptools.packages.find]
include = ["agent_eval*"]

