[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-eval-harness"
version = "1.0.0"
description = "Agent and skill evaluation harness"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
mlflow = ["mlflow[genai]>=3.5"]
anthropic = ["anthropic[vertex]>=0.40"]
evalhub = [
    "eval-hub-sdk[adapter]>=0.1,<1.0",
    "boto3>=1.34,<2.0",
]
openai = ["openai>=1.70"]
all = [
    "mlflow[genai]>=3.5",
    "anthropic[vertex]>=0.40",
    "eval-hub-sdk[adapter]>=0.1,<1.0",
    "boto3>=1.34,<2.0",
    "openai>=1.70",
]
test = ["pytest>=8.0"]

[project.scripts]
claude-trace = "agent_eval.cli.trace_run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not e2e'"
markers = ["e2e: end-to-end tests requiring Claude API (deselected by default)"]

[tool.setuptools.packages.find]
include = ["agent_eval*"]

